2018-08-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTLS.m: Change behavior so that when acting as a server we
	always request that the client sends us a certificate (if it doesn't
	have one, it should ignore the request). The 'verify' setting should
	control only whether a request without a certificate is rejected.

2018-08-08 Riccardo Mottola <rm@gnu.org>

	* configure.ac
	* configure:
	When checking for pthread_np.h include pthread.h if available or
	it may fail (e.g. OpenBSD).

2018-08-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: Update the cache on change of volatile
	domain or search list, not just when perstistent domain values
	change.

2018-07-19  Richard Frith-Macdonald <rfm@gnu.org>

	* NSTimeZones/NSTimeZones.tar: Updated zone info and corrected preferred
	abbreviation mappings to match OSX.

2018-07-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/Unicode.m: improve utf8 validity checks,
	switch to state machine based utf8 parsing for better performance.
	* Tests/base/NSString/utf8.m: add a few tests for utf8 parsing.

2018-07-10  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac:
	* configure:
	When using clang, we now supply -fobjc-runtime=gcc to target the
	gnu/gcc runtime ABI.

2018-07-07  Fred Kiefer <fredkiefer@gmx.de>

	* Source/NSString.m: Add primitive implementation for
	rangeOfComposedCharacterSequencesForRange:.

2018-07-06  Fred Kiefer <fredkiefer@gmx.de>

	* Source/GSString.m: Remove GSString copyWithZone:.
	* Source/NSString.m: Raise exception when no is provided for the
	string. This brings our implementation closer to the Cocoa one.
	* Source/GSString.m: Add similar exceptions.

2018-07-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Tests/base/NSString/test00.m: : Move _unicodeString from here...
	* Source/GSString.m: ... to here.
	In order to reliably test the internal 16bit unicode implementation
	we must have a method guaranteed to produce an instance of the correct
	class.
